[package]
name = "thyme"
version = "0.6.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
description = "Themable Immediate Mode GUI"
documentation = "https://docs.rs/thyme/"
homepage = "https://github.com/Grokmoo/thyme"
repository = "https://github.com/Grokmoo/thyme"
readme = "README.md"
keywords = ["gamedev", "graphics", "gui"]
categories = ["game-development", "gui", "rendering"]
license = "Apache-2.0"
edition = "2021"
autoexamples = false

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "hello_gl"

[[example]]
name = "hello_glium"

[[example]]
name = "hello_wgpu"

[[example]]
name = "demo_glium"

[[example]]
name = "demo_wgpu"

[[example]]
name = "demo_gl"

[features]
default = ["image"]
glium_backend = ["glium"]
wgpu_backend = ["wgpu", "futures", "bytemuck" ]
gl_backend = ["gl", "glutin", "memoffset"]

[dependencies]
log = { version = "0.4" }
serde = { version = "1", features = [ "derive" ] }
rusttype = { version = "0.9" }
winit = "0.26"
parking_lot = { version = "0.11" }
notify = { version = "4" }
rustc-hash = "1"
serde_yaml = "0.8"
pulldown-cmark = { version = "0.8", default-features = false }

image = { version = "0.23", optional = true, default_features = false, features = [ "png", "jpeg" ] }
glium = { version = "0.31", optional = true }
wgpu = { version = "0.11", optional = true, features = [ "spirv" ] }
futures = { version = "0.3", optional = true }
bytemuck = { version = "1", optional = true }
gl = { version = "0.14", optional = true}
glutin = { version = "0.28", optional = true}
memoffset = { version = "0.6", optional = true}