[package]
name = "thyme"
version = "0.7.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
description = "Themable Immediate Mode GUI"
documentation = "https://docs.rs/thyme/"
homepage = "https://github.com/Grokmoo/thyme"
repository = "https://github.com/Grokmoo/thyme"
readme = "README.md"
keywords = ["gamedev", "graphics", "gui"]
categories = ["game-development", "gui", "rendering"]
license = "Apache-2.0"
edition = "2021"
autoexamples = false

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "hello_gl"

[[example]]
name = "hello_glium"

[[example]]
name = "demo_glium"

[[example]]
name = "demo_gl"

[features]
default = ["image", "glium_backend"]
glium_backend = ["glium"]
gl_backend = ["gl", "glutin", "glutin-winit", "memoffset"]

[dependencies]
bytemuck = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
gl = { version = "0.14", optional = true }
glium = { version = "0.36", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = [ "png", "jpeg" ] }
indexmap = { version = "2", features = ["serde"] }
log = { version = "0.4" }
memoffset = { version = "0.9", optional = true }
notify = { version = "7" }
parking_lot = { version = "0.12" }
pulldown-cmark = { version = "0.12", default-features = false }
rustc-hash = "2"
rusttype = { version = "0.9" }
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
winit = "0.30"